--- a/basroba/app/static/css/layout.css
+++ b/basroba/app/static/css/layout.css
@@ -12,319 +12,94 @@ nav {
     left: 0;
     width: calc(100vw - 80px);
     height: max-content;
-    padding-top: 70px;
-    padding-left: 40px;
-    padding-right: 40px;
     background-color: black;
-    padding-bottom: 20px;
+    margin: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-
-.search-button {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 30px;
-    height: 30px;
-    margin: 0;
-    padding: 0;
-    margin-left: 40px;
-    margin-top: 85px;
-    outline: none;
-    border: none;
-    background: none;
+a {
+    color: inherit;
+    text-decoration: none;
 }
 
-.search-icon {
-    width: 100%;
-    height: 100%;
+.logo {
     color: white;
-}
-
-.website-titles {
-    display: block;
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: max-content;
-    text-align: center;
-}
-
-.website-title1 {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: max-content;
-    padding: 0;
-    margin: 0;
-    font-size: 35px;
-    font-family: "Nico Moji";
-    font-weight: bold;
-    color: white;
-}
-
-.website-title2 {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: max-content;
-    padding: 0;
-    margin: 0;
-    font-size: 20px;
-    font-weight: normal;
-    font-family: "Nico Moji";
-    color: white;
-}
-
-.navs-div {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: max-content;
-    height: max-content;
-    margin: 0;
-    padding: 0;
-    margin-top: 80px;
-    margin-right: 40px;
-}
-
-.favorite-button {
-    position: relative;
-    top: 0;
-    left: 0;
-    background: none;
-    outline: none;
-    border: none;
-    color: white;
-}
-
-.cart-button {
-    position: relative;
-    top: 0;
-    left: 0;
-    background: none;
-    outline: none;
-    border: none;
-    color: white; 
-}
-
-.lang-part {
-    position: relative;
-    top: 0;
-    display: inline-block;
-    left: 0;
-    width: max-content;
-    height: max-content;
-}
-
-.lang-text {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: max-content;
-    height: max-content;
-    padding: 0;
-    margin: 0;
-    color: white;
-    font-size: 20px;
-}
-
-.lang-button {
-    position: relative;
-    top: 0;
-    left: 0;
-    background: none;
-    color: white;
-    outline: none;
-    border: none;
-    display: inline-block;
+    font-family: 'Nico Moji';
+    font-size: 40px;
+    font-weight: 400;
 }
 
 .navs-navs {
-    display: block;
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: max-content;
-    padding: 0;
-    margin: 0;
-    font-size: 20px;
-    font-weight: normal;
-    color: white;
-    align-items: center;
     display: flex;
     justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
-
+    gap: 40px;
+    align-items: center;
 }
 
 .nav {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: max-content;
-    height: max-content;
-    padding: 0;
-    margin: 0;
-    font-size: 20px;
-    font-weight: normal;
     color: white;
-    text-decoration: none;
-    display: inline-block;
+    font-family: 'Arial';
+    font-size: 18px;
+    font-weight: 500;
 }
 
-.burger-menu {
-    position: absolute;
-    top: 70px;
-    right: 40px;
-    z-index: 1001;
-    width: 60px;
+.right-side {
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
 
-.span {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 10px;
-    background-color: white;
-    display: inline-block;
+.search-button {
+    border: none;
+    outline: none;
+    background: none;
+    cursor: pointer;
 }
 
-.burger-menu {
-    display: none;
+.favorite-button {
+    background: none;
+    border: none;
+    cursor: pointer;
 }
 
-@media screen and (max-width: 720px) {
-    .burger-menu {
-        display: block;
-    }
-
-    #menu-together {
-        position: fixed;
-        z-index: 1;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100vh;
-        background-color: rgba(68, 68, 68, 0.438);
-        z-index: 1000;
-        opacity: 0;
-    }
-
-    .navs-navs {
-        position: relative;
-        justify-content: normal;
-        display: block;
-        margin-top: 200px;
-    }
-
-    .nav {
-        display: block;
-        width: 100%;
-        left: 0%;
-        font-size: 30px;
-        margin-bottom: 10px;
-        top: 150px;
-        text-align: center;
-    }
-
-    .search-button {
-        position: absolute;
-        top: 100px;
-    }
-
-    .favorite-button {
-        width: 30px;
-        height: 30px;
-        margin-right: 20px;
-    }
-
-    .cart-button {
-        width: 30px;
-        height: 30px;
-        margin-right: 20px;
-    }
-
-    .favorite-icon {
-        width: 30px;
-        height: 30px;
-    }
-
-    .cart-icon {
-        width: 30px;
-        height: 30px;
-    }
-
-    .navs-div {
-        position: absolute;
-        top: 100px;
-    }
+.favorite-icon {
+    width: 20px;
+    height: 20px;
 }
 
-@media screen and (max-width: 480px) {
-    .website-titles {
-        text-align: left;
-    }
-
-    .website-title1 {
-        font-size: 30px;
-    }
-
-    .website-title2 {
-        font-size: 20px;
-    }
-
-    .burger-menu {
-        width: 50px;
-    }
-
-    .span {
-        height: 5px;
-        margin-bottom: 5px;
-    }
-}
-
-@media screen and (max-width: 340px) {
-    .website-title1 {
-        font-size: 25px;
-    }
-
-    .website-title2 {
-        font-size: 15px;
-    }
-}
-
+/* --- burger menu button --- */
 .burger-menu {
     cursor: pointer;
+    display: none;
+    position: relative;
+    width: 30px;
+    height: 22px;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.burger-menu span {
+    display: block;
+    height: 4px;
+    width: 100%;
+    background: white;
+    border-radius: 2px;
     transition: all 0.3s ease;
 }
 
-.burger-menu .span {
-    transition: all 0.3s ease;
-}
-
-/* Burger animation to "X" */
 .burger-menu.active .span1 {
-    transform: rotate(45deg) translate(12px, 12px);
+    transform: rotate(45deg) translate(7px, 7px);
 }
-
 .burger-menu.active .span2 {
     opacity: 0;
 }
-
 .burger-menu.active .span3 {
-    transform: rotate(-45deg) translate(12px, -12px);
+    transform: rotate(-45deg) translate(6px, -6px);
 }
 
-/* Menu overlay hidden by default */
+/* --- menu overlay --- */
 #menu-together {
     position: fixed;
     top: 0;
@@ -332,15 +107,39 @@ nav {
     width: 100%;
     height: 100vh;
     background-color: rgba(68, 68, 68, 0.9);
+    z-index: 1000;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.4s ease, visibility 0.4s ease;
-    z-index: 1000;
 }
 
-/* Active state: fade in */
 #menu-together.active {
     opacity: 1;
     visibility: visible;
+}
+
+/* --- responsive --- */
+@media screen and (max-width: 720px) {
+    .burger-menu {
+        display: flex;
+    }
+
+    .navs-navs {
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    .nav {
+        font-size: 26px;
+    }
+
+    .right-side {
+        display: none;
+    }
 }
