--- a/basroba/app/static/css/profile.css
+++ b/basroba/app/static/css/profile.css
@@ -318,8 +318,8 @@
     }
 }
 
-@media screen and (max-width: 225px) {
+@media screen and (max-width: 325px) {
     .change-address {
-        
+        margin-bottom: 5px;
     }
 }
